--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+URL: https://github.com/kiernann/ddbr
+BugReports: https://github.com/kiernann/ddbr/issues
